--- a/manual/8.operators.md
+++ b/manual/8.operators.md
@@ -3,6 +3,7 @@
 
 Operators are things you can do to variables and numbers. They are either the
 common mathematical operations or conditional operators
+
 ```
 + - will add two numbers. If you try to add two strings, the result will be a
     string glued together at the +. You can add a number to a string, and the
@@ -13,6 +14,7 @@ common mathematical operations or conditional operators
     7/2 is not equal 3.5, it's equal 3.
 % - will give you the remainder of the division. 7%2 is equal to 1.
 ```
+
 There are also conditional operators. This has to do with the conditional
 command 'if' and they are meant to return either 1 if the condition is satisfied
 and 0 if it isn't. (That's what they call 'boolean' variables. 0 means 'False'.
@@ -21,6 +23,7 @@ zero will also be True.)
 
 You can compare numbers to each other and you compare strings to each other, but
 you can not compare numbers to strings.
+
 ```
  == - Is true if both sides are equal. For strings, it means they are the same.
  >=  - True if the first value is equal to, or greater than, the second value.
@@ -29,18 +32,22 @@ you can not compare numbers to strings.
  <   - True if the first value is less than the second value
  !=  - True if the first value IS NOT equal to the second one
 ```
+
 Examples:
+
 ```
  1 == 1 is True.
  1<2 is True while 1>2 is False.
  .@x>2 is True if .@x is equal to 3. But it isn't true if .@x is 2.
 ```
-Only ' == ' and '!=' have been tested for comparing strings. Since there's no way
+
+Only `==` and `!=` have been tested for comparing strings. Since there's no way
 to code a seriously complex data structure in this language, trying to sort
 strings by alphabet would be pointless anyway.
 
 Comparisons can be stacked in the same condition:
 
+```
  && - Is True if and only if BOTH sides are true.
       ('1 == 1 && 2 == 2' is true. '2 == 1 && 1 == 1' is false.)
  || - Is True if either side of this expression is True.
@@ -48,9 +55,10 @@ Comparisons can be stacked in the same condition:
  1 == 1 && 2 == 2 is True.
  1 == 1 && 2 == 1 is False.
  1 == 1 || 2 == 1 is True.
+```
 
 Logical bitwise operators work only on numbers, and they are the following:
-
+```
  << - Left shift.
  >> - Right shift.
 	Left shift moves the binary 1(s) of a number n positions to the left,
@@ -123,10 +131,12 @@ Logical bitwise operators work only on numbers, and they are the following:
 			mes "Quest 1 complete!! You unlocked the secrets of the Xor dynasty, use them wisely.";
 			close;
 		}
+```
 
 Unary operators with only with a single number, which follows the operator, and
 are following:
 
+```
  -  - Negation.
 	The sign of the number will be reversed. If the number was positive, it will
 	become negative and vice versa.
@@ -153,10 +163,12 @@ are following:
 	Example:
 	- Ensure, that quest 2 is disabled, while keeping all other active, if they are.
 		set inProgress,inProgress&(~2);  // same as set inProgress,inProgress&0xfffffffd
+```
 
 Ternary operators take three expressions (numbers, strings or boolean), and are
 following:
 
+```
  ?: - Conditional operator
 	Very useful e.g. to replace
 
@@ -169,3 +181,4 @@ following:
 	or to replace any other simple if-else clauses. It might be worth
 	mentioning that ?: has low priority and has to be enclosed with
 	parenthesis in most (if not all) cases.
+```
