--- a/manual/9.labels.md
+++ b/manual/9.labels.md
@@ -3,38 +3,48 @@
 
 Within executable script code, some lines can be labels:
 
+```
 <label name>:
+```
 
 Labels are points of reference in your script, which can be used to route
-execution with 'goto', 'menu' and 'jump_zero' commands, invoked with 'doevent'
-and 'donpcevent' commands and are otherwise essential. A label's name may not be
-longer than 22 characters. (23rd is the ':'.) There is some confusion in the
-source about whether it's 22, 23 or 24 all over the place, so keeping labels
+execution with `goto`, `menu` and `jump_zero` commands, invoked with `doevent`
+and `donpcevent` commands and are otherwise essential. A label`s name may not be
+longer than 22 characters. (23rd is the `:`.) There is some confusion in the
+source about whether it`s 22, 23 or 24 all over the place, so keeping labels
 under 22 characters could be wise. It may only contain alphanumeric characters
 and underscore. In addition to labels you name yourself, there are also some
 special labels which the script engine will start execution from if a special
 event happens:
 
+## Time
+```
 OnClock<hour><minute>:
 OnMinute<minute>:
 OnHour<hour>:
 On<weekday><hour><minute>:
 OnDay<month><day>:
+```
 
 This will execute when the server clock hits the specified date or time. Hours
-and minutes are given in military time. ('0105' will mean 01:05 AM). Weekdays
+and minutes are given in military time. (`0105` will mean 01:05 AM). Weekdays
 are Sun,Mon,Tue,Wed,Thu,Fri,Sat. Months are 01 to 12, days are 01 to 31.
 Remember the zero.
 
+## Init
+```
 OnInit:
 OnInterIfInit:
 OnInterIfInitOnce:
+```
 
 OnInit will execute every time the scripts loading is complete, including when
 they are reloaded with @reloadscript command. OnInterIfInit will execute when
 the map server connects to a char server, OnInterIfInitOnce will only execute
 once and will not execute if the map server reconnects to the char server later.
 
+## WoE
+```
 OnAgitStart:
 OnAgitEnd:
 OnAgitInit:
@@ -44,9 +54,10 @@ OnAgitInit2:
 OnAgitStart3:
 OnAgitEnd3:
 OnAgitInit3:
+```
 
 OnAgitStart will run whenever the server shifts into WoE mode, whether it is
-done with @agitstart GM command or with 'AgitStart' script command. OnAgitEnd
+done with @agitstart GM command or with `AgitStart` script command. OnAgitEnd
 will do likewise for the end of WoE.
 
 OnAgitInit will run when data for all castles and all guilds that hold a castle
@@ -54,90 +65,119 @@ is received by map-server from the char-server after initial connect.
 
 No RID will be attached while any of the above mentioned labels are triggered, so
 no character or account-based variables will be accessible, until you attach a
-RID with 'attachrid' (see below).
+RID with `attachrid` (see below).
 
 The above also applies to, the last three labels, the only difference is that
 these labels are used exclusively for WoE SE, and are called independently.
 
+## Instance
+```
 OnInstanceInit:
+```
 
 This label will be executed when an instance is created and initialized through
-the 'instance_create' command. It will run again if @reloadscript is used while
+the `instance_create` command. It will run again if @reloadscript is used while
 an instance is in progress.
 
+```
 OnInstanceDestroy:
+```
 
 This label will be executed when an instance is destroyed by a timeout, exceeding
-the keepalive time or through the 'instance_destroy' command. It will be called
+the keepalive time or through the `instance_destroy` command. It will be called
 exactly before the instance will be destroyed and all other NPCs of the instance
 will still be available at this point of time.
 
+## Touch
+```
 OnTouch:
+```
 
-This label will be executed if a trigger area is defined for the NPC object it's
-in. If it isn't present, the execution will start from the beginning of the NPC
+This label will be executed if a trigger area is defined for the NPC object it`s
+in. If it isn`t present, the execution will start from the beginning of the NPC
 code. The RID of the triggering character object will be attached.
 
+```
 OnTouch_:
+```
 
 Similar to OnTouch, but will only run one instance. Another character is
 chosen once the triggering character leaves the area.
 
+```
 OnTouchNPC:
+```
 
 Similar to OnTouch, but will only trigger for monsters. For this case, by using
-'getattachedrid' will returns GID (ID that returned when use 'monster').
+`getattachedrid` will returns GID (ID that returned when use `monster`).
 
+## PC & NPC
+```
 OnPCLoginEvent:
 OnPCLogoutEvent:
 OnPCBaseLvUpEvent:
 OnPCJobLvUpEvent:
+```
 
-It's pretty obvious when these four special labels will be invoked.
+It`s pretty obvious when these four special labels will be invoked.
 
+```
 OnPCDieEvent:
+```
 
-This special label triggers when a player dies. The variable 'killerrid' is
+This special label triggers when a player dies. The variable `killerrid` is
 set to the ID of the killer.
 
+```
 OnPCKillEvent:
+```
 
 This special label triggers when a player kills another player. The variable
-'killedrid' is set to the ID of the player killed.
+`killedrid` is set to the ID of the player killed.
 
+```
 OnNPCKillEvent:
+```
 
 This special label triggers when a player kills a monster without label.
-The variable 'killedrid' is set to the Class (mob ID) of the monster killed.
-The variable 'killedgid' is set to the ID (unique mob game ID) of the monster killed.
+The variable `killedrid` is set to the Class (mob ID) of the monster killed.
+The variable `killedgid` is set to the ID (unique mob game ID) of the monster killed.
 
+```
 OnPCLoadMapEvent:
+```
 
 This special label triggers when a player steps in a map marked with the
-'loadevent' mapflag and attaches its RID. The fact that this label requires a
-mapflag for it to work is because, otherwise, it'd be server-wide and trigger
+`loadevent` mapflag and attaches its RID. The fact that this label requires a
+mapflag for it to work is because, otherwise, it`d be server-wide and trigger
 every time a player would change maps. Imagine the server load with 1,000 players
 (oh the pain...)
 
+```
 OnPCStatCalcEvent:
+```
 
-This special label triggers when a player's stats are recalculated, such as when
+This special label triggers when a player`s stats are recalculated, such as when
 changing stats, equipment, or maps, as well as when logging in, leveling up, and
 mounting a job mount. This can be used to grant additional item bonuses to certain
 player groups, for instance.
 
+```
 OnWhisperGlobal:
+```
 
 This special label triggers when a player whispers the NPC, and will run with the
-player's RID attached. It can accept up to ten parameters, which will be stored
+player`s RID attached. It can accept up to ten parameters, which will be stored
 into separate temporary character string variables @whispervar0$ to @whispervar9$.
-See 'doc/whisper_sys.txt' for further documentation.
+See `doc/whisper_sys.txt` for further documentation.
 
 Only the special labels which are not associated with any script command are
 listed here. There are other kinds of labels which may be triggered in a similar
 manner, but they are described with their associated commands.
 
+```
 On<label name>:
+```
 
 These special labels are used with Mob scripts mostly, and script commands
 that requires you to point/link a command to a mob or another NPC, giving a label
@@ -146,6 +186,7 @@ started with "On".
 
 Example:
 
+```
 monster "prontera",123,42,"Poringz0rd",2341,23,"Master::OnThisMobDeath";
 
 amatsu,13,152,4	script	Master	767,{
@@ -156,12 +197,13 @@ OnThisMobDeath:
 	announce "Hey, " + strcharinfo(0) + " just killed a Poringz0rd!",bc_blue|bc_all;
 	end;
 }
+```
 
 Each time you kill one, that announce will appear in blue to everyone.
 
-"Global" labels
+# "Global" labels
 
-There's a catch with labels and doevent. If you call a label (using doevent)
+There`s a catch with labels and doevent. If you call a label (using doevent)
 and called label is in NPC that has trigger area, that label must end with
 "Global" to work globally (i.e. if RID is outside of the trigger area, which
 usually happens since otherwise there would be no point calling the label with
