fix format issue

--- a/manual/3.top-level-commands.md
+++ b/manual/3.top-level-commands.md
@@ -1,4 +1,14 @@
 
+-   [Top-level commands](#Top-level commands)
+-   [Set a map flag](#Set a map flag)
+-   [模拟器特色功能](#模拟器特色功能)
+-   [编译说明](#编译说明)
+-   [常见问题](#常见问题)
+-   [加入爱好者社区](#加入爱好者社区)
+-   [维护者](#维护者)
+-   [如何作出贡献](#如何作出贡献)
+-   [许可协议](#许可协议)
+
 # Top-level commands
 
 The asterisks (`*`) in front of each line is a personal preference and is not required.
@@ -95,15 +105,15 @@ NPC names are kinda special and are formatted this way:
 <Display name>{::<Unique name>}
 ```
 All NPCs need to have a unique name that is used for identification purposes.
-When you have to identify a NPC by its name, you should use <Unique name>.
-If <Unique name> is not provided, use <Display name> instead.
+When you have to identify a NPC by its name, you should use `<Unique name>`.
+If `<Unique name>` is not provided, use `<Display name>` instead.
 
 The client has a special feature when displaying names:
 if the display name contains a '#' character, it hides that part of the name.
 ex: if your NPC is named 'Hunter#hunter1', it will be displayed as 'Hunter'
 
-<Display name> must be at most 24 characters in length.
-<Unique name> must be at most 24 characters in length.
+`<Display name>` must be at most 24 characters in length.
+`<Unique name>` must be at most 24 characters in length.
 
 ### Define a warp point
 ```
@@ -206,7 +216,7 @@ cashshop - use "cashshop" in place of "shop" to use the Cash Shop interface, all
 you to buy items with special points that are stored as account variables
 called  #CASHPOINTS and #KAFRAPOINTS. This type of shop will not allow you to sell
 items at it, only make purchases. The layout used to define sale items still count, and
-"<price>" refers to how many points will be spent purchasing the them.
+`<price>` refers to how many points will be spent purchasing the them.
 
 "itemshop" and "pointshop" use the Shop interface, allowing you to buy items with a specific
 item or special points from a variable. 'pointshop' only supports permanent character variables,
