--- a/manual/6.numbers.md
+++ b/manual/6.numbers.md
@@ -3,7 +3,7 @@
 Beside the common decimal numbers, which are nothing special whatsoever (though
 do not expect to use fractions, since ALL numbers are integer in this language),
 the script engine also handles hexadecimal numbers, which are otherwise
-identical. Writing a number like '0x<hex digits>' will make it recognized as a
+identical. Writing a number like `0x<hex digits>` will make it recognized as a
 hexadecimal value. Notice that 0x10 is equal to 16. Also notice that if you try
 to 'mes 0x10' it will print '16'.
 
