Add TOC to top-level-commands

--- a/manual/3.top-level-commands.md
+++ b/manual/3.top-level-commands.md
@@ -1,13 +1,14 @@
 
--   [Top-level commands](#Top-level commands)
--   [Set a map flag](#Set a map flag)
--   [模拟器特色功能](#模拟器特色功能)
--   [编译说明](#编译说明)
--   [常见问题](#常见问题)
--   [加入爱好者社区](#加入爱好者社区)
--   [维护者](#维护者)
--   [如何作出贡献](#如何作出贡献)
--   [许可协议](#许可协议)
+-   [Top-level commands](#Top-level%20commands)
+-   [Set a map flag](#Set%20a%20map%20flag)
+-   [Create a permanent monster spawn](#Create%20a%20permanent%20monster%20spawn)
+-   [NPC names](#NPC%20names)
+-   [Define a warp point](#Define%20a%20warp%20point)
+-   [Define an NPC object](#Define%20a%20NPC%20object)
+-   [Define a 'floating' NPC object](#Define%20a%20'floating'%20NPC%20object)
+-   [Define a shop/cashshop/itemshop/pointshop NPC](#Define%20a%20shop/cashshop/itemshop/pointshop%20NPC)
+-   [Define an warp/shop/cashshop/itemshop/pointshop/NPC duplicate](#Define%20an%20warp/shop/cashshop/itemshop/pointshop/NPC%20duplicate)
+-   [Define a function object](#Define%20a%20function%20object)
 
 # Top-level commands
 
@@ -40,7 +41,7 @@ server's up, all the maps have the flags they should have. Map flags determine
 the behavior of the map in various situations. For more details, see 'setmapflag'
 and 'doc/mapflags.txt'.
 
-### Create a permanent monster spawn:
+### Create a permanent monster spawn
 ```
 <map name>{,<x>{,<y>{,<xs>{,<ys>}}}}%TAB%monster%TAB%<monster name>{,<monster level>}%TAB%<mob id>,<amount>{,<delay1>{,<delay2>{,<event>{,<mob size>{,<mob ai>}}}}}
 ```
@@ -136,7 +137,7 @@ current scripts have a zero in there.
 
 Unlike 'warp', 'warp2' will also be triggered by hidden player.
 
-### Define an NPC object.
+### Define an NPC object
 ```
 <map name>,<x>,<y>,<facing>%TAB%script%TAB%<NPC Name>%TAB%<sprite id>,{<code>}
 <map name>,<x>,<y>,<facing>%TAB%script%TAB%<NPC Name>%TAB%<sprite id>,<triggerX>,<triggerY>,{<code>}
@@ -176,7 +177,7 @@ triggered. It may contain commands and function calls, descriptions of which
 compose most of this document. It has to be in curly brackets, unlike elsewhere
 where we use curly brackets, these do NOT signify an optional parameter.
 
-### Define a 'floating' NPC object.
+### Define a 'floating' NPC object
 ```
 -%TAB%script%TAB%<NPC Name>%TAB%-1,{<code>}
 ```
@@ -185,7 +186,7 @@ normally mean it's pointless since it can't do anything, but there are
 exceptions, mostly related to running scripts at specified time, which is what
 these floating NPC objects are for. More on that below.
 
-### Define a shop/cashshop/itemshop/pointshop NPC.
+### Define a shop/cashshop/itemshop/pointshop NPC
 ```
 -%TAB%shop%TAB%<NPC Name>%TAB%<sprite id>,<itemid>:<price>{,<itemid>:<price>...}
 <map name>,<x>,<y>,<facing>%TAB%shop%TAB%<NPC Name>%TAB%<sprite id>,<itemid>:<price>{,<itemid>:<price>...}
@@ -224,7 +225,7 @@ temporary character variables, permanent local account variables or permanent gl
 variables. These variables must be of integer type, not string. 'discount' flag is an
 optional value which makes the price at that shop become affected by discount skill.
 
-### Define an warp/shop/cashshop/itemshop/pointshop/NPC duplicate.
+### Define an warp/shop/cashshop/itemshop/pointshop/NPC duplicate
 ```
 warp/warp2: <map name>,<x>,<y>,<facing>%TAB%duplicate(<label>)%TAB%<NPC Name>%TAB%<spanx>,<spany>
 shop/cashshop/itemshop/pointshop/npc: -%TAB%duplicate(<label>)%TAB%<NPC Name>%TAB%<sprite id>
