--- a/manual/3.top-level-commands.md
+++ b/manual/3.top-level-commands.md
@@ -1,14 +1,14 @@
 
--   [Top-level commands](#Top-level%20commands)
--   [Set a map flag](#Set%20a%20map%20flag)
--   [Create a permanent monster spawn](#Create%20a%20permanent%20monster%20spawn)
--   [NPC names](#NPC%20names)
--   [Define a warp point](#Define%20a%20warp%20point)
--   [Define an NPC object](#Define%20a%20NPC%20object)
--   [Define a 'floating' NPC object](#Define%20a%20'floating'%20NPC%20object)
--   [Define a shop/cashshop/itemshop/pointshop NPC](#Define%20a%20shop/cashshop/itemshop/pointshop%20NPC)
--   [Define an warp/shop/cashshop/itemshop/pointshop/NPC duplicate](#Define%20an%20warp/shop/cashshop/itemshop/pointshop/NPC%20duplicate)
--   [Define a function object](#Define%20a%20function%20object)
+-   [Top-level commands](#top-level-commands)
+-   [Set a map flag](#set-a-map-flag)
+-   [Create a permanent monster spawn](#create-a-permanent-monster-spawn)
+-   [NPC names](#npc-names)
+-   [Define a warp point](#define-a-warp-point)
+-   [Define an NPC object](#define-a-npc-object)
+-   [Define a 'floating' NPC object](#define-a-floating-npc-object)
+-   [Define a shop/cashshop/itemshop/pointshop NPC](#define-a-shopcashshopitemshoppointshop-npc)
+-   [Define an warp/shop/cashshop/itemshop/pointshop/NPC duplicate](#Define-an-warpshopcashshopitemshoppointshopnpc-duplicate)
+-   [Define a function object](#define-a-function-object)
 
 # Top-level commands
 
