--- a/manual/9.labels.md
+++ b/manual/9.labels.md
@@ -93,8 +93,8 @@ will still be available at this point of time.
 OnTouch:
 ```
 
-This label will be executed if a trigger area is defined for the NPC object it`s
-in. If it isn`t present, the execution will start from the beginning of the NPC
+This label will be executed if a trigger area is defined for the NPC object it's
+in. If it isn't present, the execution will start from the beginning of the NPC
 code. The RID of the triggering character object will be attached.
 
 ```
