添加 item_db 和 mob_db 翻译

--- a/manual/3.top-level-commands.md
+++ b/manual/3.top-level-commands.md
@@ -3,7 +3,7 @@
 -   [Create a permanent monster spawn](#create-a-permanent-monster-spawn)
 -   [NPC names](#npc-names)
 -   [Define a warp point](#define-a-warp-point)
--   [Define an NPC object](#define-a-npc-object)
+-   [Define an NPC object](#define-an-npc-object)
 -   [Define a 'floating' NPC object](#define-a-floating-npc-object)
 -   [Define a shop/cashshop/itemshop/pointshop NPC](#define-a-shopcashshopitemshoppointshop-npc)
 -   [Define an warp/shop/cashshop/itemshop/pointshop/NPC duplicate](#Define-an-warpshopcashshopitemshoppointshopnpc-duplicate)
